--- a/Shikhai/Views/Shared/_ProductsHomePage.cshtml
+++ b/Shikhai/Views/Shared/_ProductsHomePage.cshtml
@@ -26,8 +26,19 @@
                     </div>
                 </a>
             </div>
+
         }
 
+        <div class="cbp-item books">
+            <a href="Books/SearchAll/" class="cbp-caption cbp-lightbox" data-title="Search All">
+                <div class="col-md-3" style="min-height:60px;">
+                    <div style="background-color:#376285;margin:2px;min-height:60px; min-width:270px;">
+                        <h3 style="color:white !important; text-align:center; vertical-align:central;padding-top: 18px;"> View All Books</h3>
+                    </div>
+
+                </div>
+            </a>
+        </div>
 
         @foreach (var item in Model.Stationary)
         {
@@ -42,6 +53,16 @@
                 </a>
             </div>
         }
+        <div class="cbp-item Stationaries">
+            <a href="Stationaries/SearchAll/" class="cbp-caption cbp-lightbox" data-title="Search All">
+                <div class="col-md-3" style="min-height:60px;">
+                    <div style="background-color:#376285;margin:2px;min-height:60px; min-width:270px;">
+                        <h3 style="color:white !important; text-align:center; vertical-align:central;padding-top: 18px;"> View All Stationaries</h3>
+                    </div>
+
+                </div>
+            </a>
+        </div>
 
     </div>
 </div>
