--- a/Shikhai/Views/Shared/_SideMenuLeftAdmin.cshtml
+++ b/Shikhai/Views/Shared/_SideMenuLeftAdmin.cshtml
@@ -117,29 +117,7 @@
                     </li>
                 </ul>
             </li>
-            <li class="nav-item  ">
-                <a href="javascript:;" class="nav-link nav-toggle">
-                    <i class="icon-puzzle"></i>
-                    <span class="title">Shikhai List</span>
-                    <span class="arrow"></span>
-                </a>
-                <ul class="sub-menu">
-                    <li class="nav-item  ">
-                        <a href="@Url.Action("Create", "BazarLists")">
-                            <i class="icon-basket"></i>
-                            <span class="title">Create Bazar List</span>
-                            <span class="badge badge-danger">2</span>
-                        </a>
-                    </li>
-                    <li class="nav-item  ">
-                        <a href="@Url.Action("Index", "BazarLists")">
-                            <i class="icon-list"></i>
-                            <span class="title">Bazar List</span>
-                            <span class="badge badge-success">6</span>
-                        </a>
-                    </li>
-                </ul>
-            </li>
+      
             <li class="nav-item  ">
                 <a href="javascript:;" class="nav-link nav-toggle">
                     <i class="icon-basket"></i>
@@ -160,18 +138,18 @@
             <li class="nav-item  ">
                 <a href="javascript:;" class="nav-link nav-toggle">
                     <i class="icon-docs"></i>
-                    <span class="title">Health Section</span>
+                    <span class="title">Master Data Section</span>
                     <span class="arrow"></span>
                 </a>
                 <ul class="sub-menu">
-                    <li class="nav-item  ">
+                    @*<li class="nav-item  ">
                         <a href="@Url.Action("Index", "Medicines")">
                             <i class="icon-clock"></i>
                             <span class="title">Medicines</span>
                             <span class="badge badge-success">6</span>
                         </a>
 
-                    </li>
+                    </li>*@
                     <li class="nav-item  ">
                         <a href="@Url.Action("Index", "Teachers")">
                             <i class="icon-check"></i>
@@ -180,14 +158,14 @@
                         </a>
                     </li>
 
-                    <li class="nav-item  ">
+                    @*<li class="nav-item  ">
                         <a href="@Url.Action("Index", "Appointments")">
                             <i class="icon-calendar"></i>
                             <span class="title">Appoinments</span>
                             <span class="badge badge-success">6</span>
                         </a>
 
-                    </li>
+                    </li>*@
 
                 </ul>
             </li>
@@ -238,7 +216,7 @@
                             <span class="badge badge-success">6</span>
                         </a>
                     </li>
-                    <li class="nav-item  ">
+                    @*<li class="nav-item  ">
                         <a href="@Url.Action("Index", "Merchants")">
                             <i class="icon-user"></i>
                             <span class="title">Merchants</span>
@@ -251,7 +229,7 @@
                             <span class="title">Brands</span>
                             <span class="badge badge-success">6</span>
                         </a>
-                    </li>
+                    </li>*@
                 </ul>
             </li>
 
@@ -266,7 +244,7 @@
                 </a>
                 <ul class="sub-menu">
                   
-                    <li class="nav-item">
+                    @*<li class="nav-item">
                         <a href="javascript:;" target="_blank" class="nav-link nav-toggle">
                             <i class="icon-globe"></i> Sales
                             <span class="arrow nav-toggle"></span>
@@ -294,8 +272,8 @@
                                 </a>
                             </li>
                         </ul>
-                    </li>
-                    <li class="nav-item">
+                    </li>*@
+                    @*<li class="nav-item">
                         <a href="javascript:;" target="_blank" class="nav-link nav-toggle">
                             <i class="icon-globe"></i> Products
                             <span class="arrow nav-toggle"></span>
@@ -323,7 +301,7 @@
                                 </a>
                             </li>
                         </ul>
-                    </li>
+                    </li>*@
                     <li class="nav-item">
                         <a href="@Url.Action("Index", "Logs")">
                             <i class="icon-camera"></i>
