--- a/Shikhai/Views/Categories/Edit.cshtml
+++ b/Shikhai/Views/Categories/Edit.cshtml
@@ -91,13 +91,13 @@
             </div>
             <div id="menu2" class="tab-pane fade">
 
-                @*<div class="form-group">
+                <div class="form-group">
                     @Html.LabelFor(model => model.DisplayOrder, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.DisplayOrder, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.DisplayOrder, "", new { @class = "text-danger" })
                     </div>
-                </div>*@
+                </div>
 
                 <div class="form-group">
                     @Html.LabelFor(m => m.Parent1IdList, new { @class = "col-md-2 control-label" })
