--- a/Shikhai/Views/Categories/Index.cshtml
+++ b/Shikhai/Views/Categories/Index.cshtml
@@ -15,7 +15,15 @@
                 Create New
             </a>
         </span>
-    </div>  
+    </div>
+    <div class="col-md-2">
+        <span>
+            <a href="@Url.Action("GetParentCat")" class="btn btn-default">
+                <span class="glyphicon glyphicon-bookmark"> </span>
+                Parent Category
+            </a>
+        </span>
+    </div>
 </div>
 
 
@@ -33,9 +41,9 @@
             </th>
 
 
-            @*<th>
+            <th>
                 @Html.DisplayNameFor(model => model.DisplayOrder)
-            </th>*@
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.ImagePath)
             </th>
@@ -58,7 +66,7 @@
                 <td> @Html.DisplayFor(modelItem => item.Name_English) </td>
                 <td> @Html.DisplayFor(modelItem => item.Name_Bangla)</td>
 
-                @*<td>@Html.DisplayFor(modelItem => item.DisplayOrder)</td>*@
+                <td>@Html.DisplayFor(modelItem => item.DisplayOrder)</td>
                 <td>
                     @{
                         if (!string.IsNullOrEmpty(item.ImagePath))
