--- a/Shikhai/Views/Home/Index.cshtml
+++ b/Shikhai/Views/Home/Index.cshtml
@@ -30,6 +30,50 @@
     </div>
 </div>
 
+<section class="tg-main-section tg-haslayout tg-parallaximg home_page_header_image_section mainslideshow-height" data-appear-top-offset="600" data-parallax="scroll" data-image-src="https://www.superiorlearning.ca/assets/front/images/parallax/children.jpg" style="height: 817px;">
+    <div class="homepage_slider mobilehide" style="position: relative;">
+        <img src="https://www.superiorlearning.ca/assets/front/images/slider/image1.jpg" class="cycle-slide cycle-sentinel" style="position: static; top: 0px; left: 0px; z-index: 100; opacity: 1; display: block; visibility: hidden; height: 817px;">
+
+
+
+        <img src="https://www.superiorlearning.ca/assets/front/images/slider/image1.jpg" class="cycle-slide" style="position: absolute; top: 0px; left: 0px; z-index: 100; opacity: 0; display: block; visibility: hidden; height: 817px;"><img src="https://www.superiorlearning.ca/assets/front/images/slider/image2.jpg" class="cycle-slide cycle-slide-active" style="position: absolute; top: 0px; left: 0px; z-index: 99; visibility: visible; height: 817px; opacity: 1; display: block;"><img src="https://www.superiorlearning.ca/assets/front/images/slider/image3.jpg" class="cycle-slide" style="position: absolute; top: 0px; left: 0px; z-index: 97; visibility: hidden; height: 817px; opacity: 0; display: block;">
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-xs-12">
+                <div class="tg-sectionhead">
+                    <h2>Learning has never been this easy!</h2>
+                    <h3>Find Private &amp; Affordable Tutoring in the Greater Toronto Area!</h3>
+                </div>
+                <div class="homeage_selectors text-center">
+                    <div class="tri_button active">
+                        <img src="https://www.superiorlearning.ca/assets/front/images/tutor-inperson.png">
+                        <span class="head">In-person Tutoring</span>
+                        <span class="mobilehide">Find a private tutor</span>
+                        <span class="arrow"></span>
+                    </div>
+                    <div class="tri_button">
+                        <a href="/Teachers/Index">
+                            <img src="https://www.superiorlearning.ca/assets/front/images/tutor-become.png">
+                            <span class="head">Become a Tutor</span>
+                            <span class="mobilehide">Start tutoring today</span>
+                            <span class="arrow"></span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row homepage_search_form_section">
+            <div class="col-md-10 col-md-offset-1">
+                <div class="homepage_search_form_wrapper">
+          
+
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 
 @*Categories*@
 @{ Html.RenderAction("Portfolio", "Catalog"); }
@@ -37,9 +81,59 @@
 @*Products*@
 @{ Html.RenderAction("Products", "Catalog"); }
 
-@*How it Works*@
+
+@*Easy as*@ 
+<section class="tg-main-section tg-haslayout homepage_how_we_work_section">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="text-center">
+                    <h2 style="font-size:65px; color:#000;">Easy as <span class="red" style="letter-spacing:5px;">ABC</span></h2>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+                <div class="col-md-12">
+
+                    <div class="tg-features">
+                        <div class="col-sm-4">
+                            <div class="tg-feature">
+                                <img src="https://www.superiorlearning.ca/assets/front/images/icon1.png">
+                                <h3><span class="red">A. </span>Choose</h3>
+                                <p style="font-size:16px;">your subject, grade and location</p>
+                                <span class="arrow"></span>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="tg-feature">
+                                <img src="https://www.superiorlearning.ca/assets/front/images/icon2.png">
+                                <h3><span class="red">B. </span>Select</h3>
+                                <p style="font-size:16px;">your ideal tutor as per your needs (budget, educational requirements)</p>
+                                <span class="arrow"></span>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="tg-feature">
+                                <img src="https://www.superiorlearning.ca/assets/front/images/icon3.png">
+                                <h3><span class="red">C. </span>Contact</h3>
+                                <p style="font-size:16px;">your ideal instructor. Send them a message &amp; book for lessons</p>
+                                <span class="arrow"></span>
+                            </div>
+                        </div>
+                        <div class="col-sm-12 text-center">
+                            <a href="https://www.superiorlearning.ca/tutors" class="red_button">FIND A TUTOR NOW!</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+       
+    </div>
+</section>
+
+@*testimonial*@
 
 
+@*are you teacher*@
 <section id="TeacherCTA" class="Landing">
     <div class="Container">
         <div class="PageDesc">
