--- a/Shikhai/Views/Shared/_LayoutHead.cshtml
+++ b/Shikhai/Views/Shared/_LayoutHead.cshtml
@@ -185,3 +185,23 @@
         color: red;
     }
 </style>
+
+@*superior*@
+<link href="~/Content/superior/accordion.min.css" rel="stylesheet" />
+<link href="~/Content/superior/alertify.min.css" rel="stylesheet" />
+<link href="~/Content/superior/checkbox.min.css" rel="stylesheet" />
+<link href="~/Content/superior/color.css" rel="stylesheet" />
+<link href="~/Content/superior/css_support1.css" rel="stylesheet" />
+<link href="~/Content/superior/css14.css" rel="stylesheet" />
+<link href="~/Content/superior/customScrollbar.css" rel="stylesheet" />
+<link href="~/Content/superior/form.css" rel="stylesheet" />
+<link href="~/Content/superior/jquery.countdown.css" rel="stylesheet" />
+<link href="~/Content/superior/main2.css" rel="stylesheet" />
+<link href="~/Content/superior/menu.min.css" rel="stylesheet" />
+<link href="~/Content/superior/owl.carousel.css" rel="stylesheet" />
+<link href="~/Content/superior/owl.theme.css" rel="stylesheet" />
+<link href="~/Content/superior/responsive.css" rel="stylesheet" />
+<link href="~/Content/superior/simplyscroll.css" rel="stylesheet" />
+<link href="~/Content/superior/wickedpicker.min.css" rel="stylesheet" />
+
+
