--- a/Shikhai/Views/Home/Contact.cshtml
+++ b/Shikhai/Views/Home/Contact.cshtml
@@ -1,4 +1,8 @@
 ﻿<link href="~/Content/metronic/css/contact.css" rel="stylesheet" />
+<style>
+    .c-content-feedback-1 > .row > div form .input-group {
+        width: 327px;
+</style>
 
 <!-- BEGIN PAGE TITLE-->
 <h1 class="page-title">
@@ -7,64 +11,10 @@
 </h1>
 <!-- END PAGE TITLE-->
 <!-- END PAGE HEADER-->
-<div class="c-content-contact-1 c-opt-1">
-    <div class="row" data-auto-height=".c-height">
-        <div class="col-lg-8 col-md-6 c-desktop"></div>
-        <div class="col-lg-4 col-md-6">
-            <div class="c-body">
-                <div class="c-section">
-                    <h3>Shikhai Inc.</h3>
-                </div>
-                <div class="c-section">
-                    <div class="c-content-label uppercase bg-blue">Address</div>
-                    <p>
-                        House#01, Road#05,
-                        <br />Sector#12, Uttara
-                        <br />Bangladesh
-                    </p>
-                </div>
-                <div class="c-section">
-                    <div class="c-content-label uppercase bg-blue">Contacts</div>
-                    <p>
-                        <strong>T</strong> 01717 123 456
-                        <br />
-                        <strong>F</strong> 01711 987 654
-                    </p>
-                </div>
-                <div class="c-section">
-                    <div class="c-content-label uppercase bg-blue">Social</div>
-                    <br />
-                    <ul class="c-content-iconlist-1 ">
-                        <li>
-                            <a href="#">
-                                <i class="fa fa-twitter"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="fa fa-facebook"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="fa fa-youtube-play"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="fa fa-linkedin"></i>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="gmapbg" class="c-content-contact-1-gmap" style="height: 615px;"></div>
-</div>
+
 <div class="c-content-feedback-1 c-option-1">
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-4">
             <div class="c-container bg-green">
                 <div class="c-content-title-1 c-inverse">
                     <h3 class="uppercase">Need to know more?</h3>
@@ -89,7 +39,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
             <div class="c-contact">
                 <div class="c-content-title-1">
                     <h3 class="uppercase">Keep in touch</h3>
@@ -112,6 +62,64 @@
                     <button type="submit" class="btn grey">Submit</button>
                 </form>
             </div>
+        </div>
+        <div class="col-md-4">
+            <div class="c-content-contact-1 c-opt-1">
+                <div class="row" data-auto-height=".c-height">
+                    <div class=" col-md-12 c-desktop"></div>
+                    <div class="col-md-12">
+                        <div class="c-body">
+                            <div class="c-section">
+                                <h3>Shikhai Inc.</h3>
+                            </div>
+                            <div class="c-section">
+                                <div class="c-content-label uppercase bg-blue">Address</div>
+                                <p>
+                                    House#01, Road#05,
+                                    <br />Sector#12, Uttara
+                                    <br />Bangladesh
+                                </p>
+                            </div>
+                            <div class="c-section">
+                                <div class="c-content-label uppercase bg-blue">Contacts</div>
+                                <p>
+                                    <strong>T</strong> 01717 123 456
+                                    <br />
+                                    <strong>F</strong> 01711 987 654
+                                </p>
+                            </div>
+                            <div class="c-section">
+                                <div class="c-content-label uppercase bg-blue">Social</div>
+                                <br />
+                                <ul class="c-content-iconlist-1 ">
+                                    <li>
+                                        <a href="#">
+                                            <i class="fa fa-twitter"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <i class="fa fa-facebook"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <i class="fa fa-youtube-play"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <i class="fa fa-linkedin"></i>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
         </div>
     </div>
 </div>
