--- a/Shikhai/Views/Home/Index.cshtml
+++ b/Shikhai/Views/Home/Index.cshtml
@@ -30,13 +30,18 @@
     </div>
 </div>
 
-<section class="tg-main-section tg-haslayout tg-parallaximg home_page_header_image_section mainslideshow-height" data-appear-top-offset="600" data-parallax="scroll" data-image-src="https://www.superiorlearning.ca/assets/front/images/parallax/children.jpg" style="height: 817px;">
+<section class="tg-main-section tg-haslayout tg-parallaximg home_page_header_image_section mainslideshow-height" data-appear-top-offset="600" data-parallax="scroll"
+         data-image-src="https://www.superiorlearning.ca/assets/front/images/parallax/children.jpg" style="height: 817px;">
     <div class="homepage_slider mobilehide" style="position: relative;">
-        <img src="https://www.superiorlearning.ca/assets/front/images/slider/image1.jpg" class="cycle-slide cycle-sentinel" style="position: static; top: 0px; left: 0px; z-index: 100; opacity: 1; display: block; visibility: hidden; height: 817px;">
+        <img src="https://www.superiorlearning.ca/assets/front/images/slider/image1.jpg" class="cycle-slide cycle-sentinel" style="position: static; top: 0px; left: 0px; z-index: 100; opacity: 1;
+                display: block; visibility: hidden; height: 817px;">
 
 
-
-        <img src="https://www.superiorlearning.ca/assets/front/images/slider/image1.jpg" class="cycle-slide" style="position: absolute; top: 0px; left: 0px; z-index: 100; opacity: 0; display: block; visibility: hidden; height: 817px;"><img src="https://www.superiorlearning.ca/assets/front/images/slider/image2.jpg" class="cycle-slide cycle-slide-active" style="position: absolute; top: 0px; left: 0px; z-index: 99; visibility: visible; height: 817px; opacity: 1; display: block;"><img src="https://www.superiorlearning.ca/assets/front/images/slider/image3.jpg" class="cycle-slide" style="position: absolute; top: 0px; left: 0px; z-index: 97; visibility: hidden; height: 817px; opacity: 0; display: block;">
+        <img src="https://www.superiorlearning.ca/assets/front/images/slider/image1.jpg" class="cycle-slide" style="position: absolute; top: 0px; left: 0px; z-index: 100; opacity: 0; display: block;
+            visibility: hidden; height: 817px;"><img src="https://www.superiorlearning.ca/assets/front/images/slider/image2.jpg" class="cycle-slide cycle-slide-active" style="position: absolute; top: 0px;
+                left: 0px; z-index: 99; visibility: visible; height: 817px; opacity: 1; display: block;">
+        <img src="https://www.superiorlearning.ca/assets/front/images/slider/image3.jpg" class="cycle-slide" style="position: absolute; top: 0px; left: 0px; z-index: 97; visibility: hidden; height:
+            817px; opacity: 0; display: block;">
     </div>
     <div class="container">
         <div class="row">
@@ -66,7 +71,7 @@
         <div class="row homepage_search_form_section">
             <div class="col-md-10 col-md-offset-1">
                 <div class="homepage_search_form_wrapper">
-          
+
 
                 </div>
             </div>
@@ -82,7 +87,7 @@
 @{ Html.RenderAction("Products", "Catalog"); }
 
 
-@*Easy as*@ 
+@*Easy as*@
 <section class="tg-main-section tg-haslayout homepage_how_we_work_section">
     <div class="container">
         <div class="row">
@@ -93,40 +98,40 @@
             </div>
         </div>
         <div class="row">
-                <div class="col-md-12">
+            <div class="col-md-12">
 
-                    <div class="tg-features">
-                        <div class="col-sm-4">
-                            <div class="tg-feature">
-                                <img src="https://www.superiorlearning.ca/assets/front/images/icon1.png">
-                                <h3><span class="red">A. </span>Choose</h3>
-                                <p style="font-size:16px;">your subject, grade and location</p>
-                                <span class="arrow"></span>
-                            </div>
+                <div class="tg-features">
+                    <div class="col-sm-4">
+                        <div class="tg-feature">
+                            <img src="https://www.superiorlearning.ca/assets/front/images/icon1.png">
+                            <h3><span class="red">A. </span>Choose</h3>
+                            <p style="font-size:16px;">your subject, grade and location</p>
+                            <span class="arrow"></span>
                         </div>
-                        <div class="col-sm-4">
-                            <div class="tg-feature">
-                                <img src="https://www.superiorlearning.ca/assets/front/images/icon2.png">
-                                <h3><span class="red">B. </span>Select</h3>
-                                <p style="font-size:16px;">your ideal tutor as per your needs (budget, educational requirements)</p>
-                                <span class="arrow"></span>
-                            </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="tg-feature">
+                            <img src="https://www.superiorlearning.ca/assets/front/images/icon2.png">
+                            <h3><span class="red">B. </span>Select</h3>
+                            <p style="font-size:16px;">your ideal tutor as per your needs (budget, educational requirements)</p>
+                            <span class="arrow"></span>
                         </div>
-                        <div class="col-sm-4">
-                            <div class="tg-feature">
-                                <img src="https://www.superiorlearning.ca/assets/front/images/icon3.png">
-                                <h3><span class="red">C. </span>Contact</h3>
-                                <p style="font-size:16px;">your ideal instructor. Send them a message &amp; book for lessons</p>
-                                <span class="arrow"></span>
-                            </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="tg-feature">
+                            <img src="https://www.superiorlearning.ca/assets/front/images/icon3.png">
+                            <h3><span class="red">C. </span>Contact</h3>
+                            <p style="font-size:16px;">your ideal instructor. Send them a message &amp; book for lessons</p>
+                            <span class="arrow"></span>
                         </div>
-                        <div class="col-sm-12 text-center">
-                            <a href="https://www.superiorlearning.ca/tutors" class="red_button">FIND A TUTOR NOW!</a>
-                        </div>
+                    </div>
+                    <div class="col-sm-12 text-center">
+                        <a href="https://www.superiorlearning.ca/tutors" class="red_button">FIND A TUTOR NOW!</a>
                     </div>
                 </div>
             </div>
-       
+        </div>
+
     </div>
 </section>
 
@@ -147,3 +152,9 @@
         </div>
     </div>
 </section>
+
+<script>
+    $(document).ready(function () {
+        $(".owl-carousel").owlCarousel();
+    });
+</script>
