--- a/Shikhai/Views/Shared/_LayoutFooter.cshtml
+++ b/Shikhai/Views/Shared/_LayoutFooter.cshtml
@@ -133,3 +133,41 @@
 
     });
 </script>
+
+
+@*superior js*@
+
+
+@*<script src="https://www.superiorlearning.ca/assets/front/js/vendor/jquery-library.js"></script>
+    <script src="https://www.superiorlearning.ca/assets/front/js/vendor/jquery-library.js"></script>
+    <script src="https://www.superiorlearning.ca/assets/front/js/jquery.datetimepicker.full.min.js"></script>
+    <script src="https://www.superiorlearning.ca/assets/front/js/vendor/bootstrap.min.js"></script>
+    <script src="https://www.superiorlearning.ca/assets/front/js/bootstrap-add-clear.min.js"></script>
+    <script src="https://www.superiorlearning.ca/assets/front/js/bootstrap-timepicker.min.js"></script>
+    <script src="https://www.superiorlearning.ca/assets/front/js/mapclustering/data.json"></script>*@
+
+<script src="https://www.superiorlearning.ca/assets/front/js/mapclustering/markerclusterer.min.js"></script>
+
+<script src="https://www.superiorlearning.ca/assets/front/js/mapclustering/map.js"></script>
+<script src="https://www.superiorlearning.ca/assets/front/js/customScrollbar.min.js"></script>
+<script src="https://www.superiorlearning.ca/assets/front/js/jquery.countdown.js"></script>
+<script src="https://www.superiorlearning.ca/assets/front/js/simplyscroll.min.js"></script>
+<script src="https://www.superiorlearning.ca/assets/front/js/owl.carousel.min.js"></script>
+<script src="https://www.superiorlearning.ca/assets/front/js/chosen.jquery.js"></script>
+<script src="https://www.superiorlearning.ca/assets/front/js/jquery-ui.js"></script>
+<script src="https://www.superiorlearning.ca/assets/front/js/parallax.js"></script>
+<script src="https://www.superiorlearning.ca/assets/front/js/countTo.js"></script>
+<script src="https://www.superiorlearning.ca/assets/front/js/cycle2.min.js"></script>
+<script src="https://www.superiorlearning.ca/assets/front/js/loader.js"></script>
+<script src="https://www.superiorlearning.ca/assets/front/js/form.js"></script>
+<script src="https://www.superiorlearning.ca/assets/front/js/checkbox.min.js"></script>
+<script src="https://www.superiorlearning.ca/assets/front/js/appear.js"></script>
+<script src="https://www.superiorlearning.ca/assets/front/js/gmap3.js"></script>
+<script src="https://www.superiorlearning.ca/assets/front/js/alertify.min.js"></script>
+<script src="https://www.superiorlearning.ca/assets/front/js/accordion.min.js"></script>
+<script src="https://www.superiorlearning.ca/assets/front/js/jquery.form.min.js"></script>
+
+<script src="~/Scripts/main14.js"></script>
+<script src="https://www.superiorlearning.ca/assets/front/js/wickedpicker.min.js"></script>
+
+
