--- a/Shikhai/Views/Shared/_TopMenu.cshtml
+++ b/Shikhai/Views/Shared/_TopMenu.cshtml
@@ -27,23 +27,24 @@
                                 <a href='/Students/Dashboard'>Student Panel</a>
                             </li>
                         }
-                        <li><a href='/Home/About'>ABOUT</a></li>
+                        <li><a href='/Home/About'>Become a Tutor</a></li>
                         <li>
-                            <a href='#'>PRODUCTS</a>
+                            <a href='#'>ABOUT</a>
                             <ul>
                                 <li>
-                                    <a href='#'>Product 1</a>
-                                    <ul>
-                                        <li><a href='#'>Sub Product</a></li>
-                                        <li><a href='#'>Sub Product</a></li>
-                                    </ul>
+                                    <a href='/Home/WhyUs'>Why Us?</a>
                                 </li>
                                 <li>
-                                    <a href='#'>Product 2</a>
-                                    <ul>
-                                        <li><a href='#'>Sub Product</a></li>
-                                        <li><a href='#'>Sub Product</a></li>
-                                    </ul>
+                                    <a href='/Home/Howwork'>How we work?</a>
+                                </li>
+                                <li>
+                                    <a href='/Home/FAQStudents'>FAQ for Students</a>
+                                </li>
+                                <li>
+                                    <a href='/Home/FAQTutors'>FAQ for Tutors</a>
+                                </li>
+                                <li>
+                                    <a href='/Home/Testimonial'>Testimonial</a>
                                 </li>
                             </ul>
                         </li>
