--- a/Shikhai/Views/Shared/_Footer.cshtml
+++ b/Shikhai/Views/Shared/_Footer.cshtml
@@ -1,4 +1,4 @@
-﻿<footer class="">
+﻿<footer class="black" style="background-color:black;">
     <div class="container">
 
         <form name="contentForm" enctype="multipart/form-data" method="post" action="">
