--- a/Shikhai/Views/Shared/_LayoutHead.cshtml
+++ b/Shikhai/Views/Shared/_LayoutHead.cshtml
@@ -15,8 +15,6 @@
 @Styles.Render("~/Content/jQuery-File-Upload")
 @Styles.Render("~/Content/datetimepicker")
 
-
-<link href="~/Content/Site.css" rel="stylesheet" />
 @*metronic*@
 
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css" />
@@ -207,3 +205,6 @@
 <link href="~/Content/superior/wickedpicker.min.css" rel="stylesheet" />
 
 
+
+@*default*@
+<link href="~/Content/Site.css" rel="stylesheet" />
