--- a/Shikhai/Views/Home/Index.cshtml
+++ b/Shikhai/Views/Home/Index.cshtml
@@ -32,8 +32,9 @@
 
 <section class="tg-main-section tg-haslayout tg-parallaximg home_page_header_image_section mainslideshow-height" data-appear-top-offset="600" data-parallax="scroll"
          data-image-src="https://www.superiorlearning.ca/assets/front/images/parallax/children.jpg" style="height: 817px;">
+
     <div class="homepage_slider mobilehide" style="position: relative;">
-        <img src="https://www.superiorlearning.ca/assets/front/images/slider/image1.jpg" class="cycle-slide cycle-sentinel" style="position: static; top: 0px; left: 0px; z-index: 100; opacity: 1;
+        <img src="/Content/images/ShikhaiImages/pic-01.jpg" class="cycle-slide cycle-sentinel" style="position: static; top: 0px; left: 0px; z-index: 100; opacity: 1;
                 display: block; visibility: hidden; height: 817px;">
 
 
@@ -54,14 +55,14 @@
                     <div class="tri_button active">
                         <img src="https://www.superiorlearning.ca/assets/front/images/tutor-inperson.png">
                         <span class="head">In-person Tutoring</span>
-                        <span class="mobilehide">Find a private tutor</span>
+                        <span class="mobilehide">Register As Student</span>
                         <span class="arrow"></span>
                     </div>
                     <div class="tri_button">
                         <a href="/Teachers/Index">
                             <img src="https://www.superiorlearning.ca/assets/front/images/tutor-become.png">
                             <span class="head">Become a Tutor</span>
-                            <span class="mobilehide">Start tutoring today</span>
+                            <span class="mobilehide">Register As Teacher</span>
                             <span class="arrow"></span>
                         </a>
                     </div>
@@ -137,6 +138,114 @@
 
 @*testimonial*@
 
+<style>
+    #owl-demo .item {
+        margin: 3px;
+    }
+
+        #owl-demo .item img {
+            display: block;
+            height: auto;
+        }
+
+
+
+    .item {
+        text-align: center;
+        margin: 20px 30px 40px;
+    }
+
+        .item .pic {
+            display: inline-block;
+            width: 100px;
+            height: 100px;
+            border-radius: 25px;
+            border: 4px solid #6b2014;
+            margin-bottom: 15px;
+            overflow: hidden;
+        }
+
+            .item .pic img {
+                width: 100%;
+                height: auto;
+            }
+
+        .item .description {
+            padding: 0 20px 20px;
+            font-size: 15px;
+            color: white;
+            line-height: 30px;
+            border-radius: 25px;
+            margin-bottom: 25px;
+        }
+
+        .item .title {
+            display: block;
+            margin: 0 0 7px 0;
+            font-size: 20px;
+            font-weight: 600;
+            color: white;
+            letter-spacing: 1px;
+            text-transform: uppercase;
+        }
+
+        .item .post {
+            display: block;
+            font-size: 15px;
+            color: white;
+            text-transform: capitalize;
+        }
+
+
+    .owl-stage-outer {
+        position: relative;
+        z-index: 10;
+    }
+
+    .owl-controls {
+        position: relative;
+        z-index: 99;
+        margin-top: -23px;
+        margin-right: -423px;
+    }
+   
+</style>
+
+
+<div id="owl-demo">
+    <div class="item" style="background-image: url('../Content/images/ShikhaiImages/pic-02.jpg');">
+        <div class="pic">
+            <img src="https://www.superiorlearning.ca/assets/front/images/tutor-inperson.png">
+        </div>
+        <p class="description">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusantium ad asperiores at atque culpa dolores eaque fugiat hic illo ipsam ipsum minima modi necessitatibus nemo officia, omnis perferendis placeat quaerat quas quis ratione rerum sint sit vitae. Animi architecto consequatur delectus eos id.
+        </p>
+        <h3 class="title">Williamson</h3>
+        <span class="post">Web Developer</span>
+    </div>
+
+    <div class="item" style="background-image: url('../Content/images/ShikhaiImages/pic-02.jpg');">
+        <div class="pic">
+            <img src="/Content/images/ShikhaiImages/parents.jpg">
+        </div>
+        <p class="description">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusantium ad asperiores at atque culpa dolores eaque fugiat hic illo ipsam ipsum minima modi necessitatibus nemo officia, omnis perferendis placeat quaerat quas quis ratione rerum sint sit vitae. Animi architecto consequatur delectus eos id.
+        </p>
+        <h3 class="title">Williamson</h3>
+        <span class="post">Web Developer</span>
+    </div>
+
+    <div class="item" style="background-image: url('../Content/images/ShikhaiImages/pic-02.jpg');">
+        <div class="pic">
+            <img src="https://www.superiorlearning.ca/assets/front/images/tutor-inperson.png">
+        </div>
+        <p class="description">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusantium ad asperiores at atque culpa dolores eaque fugiat hic illo ipsam ipsum minima modi necessitatibus nemo officia, omnis perferendis placeat quaerat quas quis ratione rerum sint sit vitae. Animi architecto consequatur delectus eos id.
+        </p>
+        <h3 class="title">Williamson</h3>
+        <span class="post">Web Developer</span>
+    </div>
+</div>
 
 @*are you teacher*@
 <section id="TeacherCTA" class="Landing">
