--- a/Shikhai/Views/Catalog/_LessonsPortfolio.cshtml
+++ b/Shikhai/Views/Catalog/_LessonsPortfolio.cshtml
@@ -1,5 +1,7 @@
 ﻿@model Shikhai.Models.Portfolio 
 
+<h3>Browse Lessons</h3>
+
 <div class="portfolio-content portfolio-4">
     <div id="js-filters-full-width" class="cbp-l-filters-alignCenter">
 
