--- a/Shikhai/Views/Catalog/_ProductsPortfolio.cshtml
+++ b/Shikhai/Views/Catalog/_ProductsPortfolio.cshtml
@@ -1,5 +1,7 @@
 ﻿@model Shikhai.Models.ProductViewModel
 
+<h3>Browse Products</h3>
+
 <div class="portfolio-content portfolio-4">
     <div id="js-filters-full-width2" class="cbp-l-filters-alignCenter">
         <div data-filter=".books" class="cbp-filter-item ">
