--- a/Shikhai/Views/Home/Index.cshtml
+++ b/Shikhai/Views/Home/Index.cshtml
@@ -2,7 +2,6 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
 <style>
     .row {
         display: flex; /* equal height of the children */
@@ -82,170 +81,20 @@
 
 
 @*Categories*@
-@{ Html.RenderAction("Portfolio", "Catalog"); }
+@{ Html.RenderAction("LessonsPortfolio", "Catalog"); }
 
 @*Products*@
-@{ Html.RenderAction("Products", "Catalog"); }
+
+@{ Html.RenderAction("ProductsPortfolio", "Catalog"); }
 
 
 @*Easy as*@
-<section class="tg-main-section tg-haslayout homepage_how_we_work_section">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="text-center">
-                    <h2 style="font-size:65px; color:#000;">Easy as <span class="red" style="letter-spacing:5px;">ABC</span></h2>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
 
-                <div class="tg-features">
-                    <div class="col-sm-4">
-                        <div class="tg-feature">
-                            <img src="https://www.superiorlearning.ca/assets/front/images/icon1.png">
-                            <h3><span class="red">A. </span>Choose</h3>
-                            <p style="font-size:16px;">your subject, grade and location</p>
-                            <span class="arrow"></span>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="tg-feature">
-                            <img src="https://www.superiorlearning.ca/assets/front/images/icon2.png">
-                            <h3><span class="red">B. </span>Select</h3>
-                            <p style="font-size:16px;">your ideal tutor as per your needs (budget, educational requirements)</p>
-                            <span class="arrow"></span>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="tg-feature">
-                            <img src="https://www.superiorlearning.ca/assets/front/images/icon3.png">
-                            <h3><span class="red">C. </span>Contact</h3>
-                            <p style="font-size:16px;">your ideal instructor. Send them a message &amp; book for lessons</p>
-                            <span class="arrow"></span>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 text-center">
-                        <a href="https://www.superiorlearning.ca/tutors" class="red_button">FIND A TUTOR NOW!</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </div>
-</section>
+@{ Html.RenderAction("EasyAs123", "Catalog"); }
 
 @*testimonial*@
 
-<style>
-    #owl-demo .item {
-        margin: 3px;
-    }
-
-        #owl-demo .item img {
-            display: block;
-            height: auto;
-        }
-
-
-
-    .item {
-        text-align: center;
-        margin: 20px 30px 40px;
-    }
-
-        .item .pic {
-            display: inline-block;
-            width: 100px;
-            height: 100px;
-            border-radius: 25px;
-            border: 4px solid #6b2014;
-            margin-bottom: 15px;
-            overflow: hidden;
-        }
-
-            .item .pic img {
-                width: 100%;
-                height: auto;
-            }
-
-        .item .description {
-            padding: 0 20px 20px;
-            font-size: 15px;
-            color: white;
-            line-height: 30px;
-            border-radius: 25px;
-            margin-bottom: 25px;
-        }
-
-        .item .title {
-            display: block;
-            margin: 0 0 7px 0;
-            font-size: 20px;
-            font-weight: 600;
-            color: white;
-            letter-spacing: 1px;
-            text-transform: uppercase;
-        }
-
-        .item .post {
-            display: block;
-            font-size: 15px;
-            color: white;
-            text-transform: capitalize;
-        }
-
-
-    .owl-stage-outer {
-        position: relative;
-        z-index: 10;
-    }
-
-    .owl-controls {
-        position: relative;
-        z-index: 99;
-        margin-top: -23px;
-        margin-right: -423px;
-    }
-   
-</style>
-
-
-<div id="owl-demo">
-    <div class="item" style="background-image: url('../Content/images/ShikhaiImages/pic-02.jpg');">
-        <div class="pic">
-            <img src="https://www.superiorlearning.ca/assets/front/images/tutor-inperson.png">
-        </div>
-        <p class="description">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusantium ad asperiores at atque culpa dolores eaque fugiat hic illo ipsam ipsum minima modi necessitatibus nemo officia, omnis perferendis placeat quaerat quas quis ratione rerum sint sit vitae. Animi architecto consequatur delectus eos id.
-        </p>
-        <h3 class="title">Williamson</h3>
-        <span class="post">Web Developer</span>
-    </div>
-
-    <div class="item" style="background-image: url('../Content/images/ShikhaiImages/pic-02.jpg');">
-        <div class="pic">
-            <img src="/Content/images/ShikhaiImages/parents.jpg">
-        </div>
-        <p class="description">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusantium ad asperiores at atque culpa dolores eaque fugiat hic illo ipsam ipsum minima modi necessitatibus nemo officia, omnis perferendis placeat quaerat quas quis ratione rerum sint sit vitae. Animi architecto consequatur delectus eos id.
-        </p>
-        <h3 class="title">Williamson</h3>
-        <span class="post">Web Developer</span>
-    </div>
-
-    <div class="item" style="background-image: url('../Content/images/ShikhaiImages/pic-02.jpg');">
-        <div class="pic">
-            <img src="https://www.superiorlearning.ca/assets/front/images/tutor-inperson.png">
-        </div>
-        <p class="description">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusantium ad asperiores at atque culpa dolores eaque fugiat hic illo ipsam ipsum minima modi necessitatibus nemo officia, omnis perferendis placeat quaerat quas quis ratione rerum sint sit vitae. Animi architecto consequatur delectus eos id.
-        </p>
-        <h3 class="title">Williamson</h3>
-        <span class="post">Web Developer</span>
-    </div>
-</div>
+@{ Html.RenderAction("Testimonial", "Catalog"); }
 
 @*are you teacher*@
 <section id="TeacherCTA" class="Landing">
